<resources>
    <string name="app_name">Honey I\'m Home!</string>
    <string name="curLocationText">curLocationText</string>
    <string name="curLon">curLon</string>
    <string name="curLat">curLat</string>
    <string name="homeLocationText">homeLocationText</string>
    <string name="homeLon">homeLon</string>
    <string name="homeLat">homeLat</string>
    <string name="startTrack">Start tracking location</string>
    <string name="clearHome">Clear Home</string>
    <string name="setHome">Set Home</string>
</resources>
