<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/sat"
        android:layout_width="87dp"
        android:layout_height="161dp"
        android:src="@drawable/hiclipart"
        app:layout_constraintBottom_toBottomOf="@id/curLocationText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.258"/>

    <TextView
        android:id="@+id/curLocationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/curLocationText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/curLon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"/>

    <TextView
        android:id="@+id/curLon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/curLon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"/>

    <TextView
        android:id="@+id/curLat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/curLat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/curLon"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"/>

    <TextView
        android:id="@+id/homeLocationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/homeLocationText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/homeLon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/homeLon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/homeLon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/homeLat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/homeLat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/homeLon"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    

</androidx.constraintlayout.widget.ConstraintLayout>